# stale-repos

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  auth.py  pyproject.toml  requirements-test.txt  stale_repos.py  test_auth.py  test_env.py  test_stale_repos.py
.github/: copilot-instructions.md
.github/chainguard/: update-uv-lock.sts.yaml
.github/linters/: .isort.cfg  .mypy.ini  zizmor.yaml
.github/workflows/: auto-labeler.yml  codeql.yml  copilot-setup-steps.yml  dependency-review.yml  docker-image.yml  linter.yaml  major-version-updater.yml  mark-ready-when-ready.yml  pr-title.yml  python-package.yml  release.yml  scorecard.yml  stale.yaml  update-uv-lock.yml  use-action.yml
