[project]
name = "stale-repos"
version = "1.0.0"
description = "GitHub Action that finds stale repositories in a GitHub organization."
requires-python = ">=3.11"
dependencies = [
    "github3-py==4.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "black==26.1.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "pylint==4.0.5",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "types-python-dateutil==2.9.0.20260124",
    "types-requests==2.32.4.20260107",
]
