[project]
name = "stale-repos"
version = "1.0.0"
description = "GitHub Action that finds stale repositories in a GitHub organization."
requires-python = ">=3.11"
dependencies = [
    "PyGithub==2.9.1",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==2.3.0",
    "mypy-extensions==1.1.0",
    "pylint==4.0.6",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
]
